// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketAssignee/> render() should display teams only 1`] = `
<Dropdown
  active={false}
  addonType={false}
  className="classname"
  direction="down"
  inNavbar={false}
  isOpen={false}
  nav={false}
  toggle={[Function]}
>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="toggle btn-transparent"
    color="secondary"
    type="button"
  >
    <span>
      Unassigned
    </span>
  </DropdownToggle>
  <DropdownMenu
    flip={true}
    right={true}
    style={
      Object {
        "width": "260px",
      }
    }
    tag="div"
  >
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
      ASSIGN TO:
    </DropdownItem>
    <DropdownItem
      className="dropdown-item-input"
      header={true}
      tag="button"
      toggle={true}
    />
    <DropdownItem
      divider={true}
      key="dividerBeforeTeams"
      tag="button"
      toggle={true}
    />
    <TicketAssigneeTeamSection
      currentAssigneeTeam={null}
      key="teamSection"
      selectTeam={[Function]}
      teams={
        Immutable.Seq [
          Immutable.Map {
            "id": 1,
            "name": "Team 1",
            "decoration": Immutable.Map {},
          },
          Immutable.Map {
            "id": 2,
            "name": "Team 2",
            "decoration": Immutable.Map {},
          },
        ]
      }
    />
  </DropdownMenu>
</Dropdown>
`;

exports[`<TicketAssignee/> render() should display the email of the agent assigned as its name because it has no name 1`] = `
<Dropdown
  active={false}
  addonType={false}
  className="classname"
  direction="down"
  inNavbar={false}
  isOpen={false}
  nav={false}
  toggle={[Function]}
>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="toggle btn-transparent"
    color="secondary"
    type="button"
  >
    <AgentLabel
      className=""
      maxWidth="100"
      name="steve@acme.gorgias.io"
      profilePictureUrl=""
      shouldDisplayAvatar={true}
    />
  </DropdownToggle>
  <DropdownMenu
    flip={true}
    right={true}
    style={
      Object {
        "width": "260px",
      }
    }
    tag="div"
  >
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
      ASSIGN TO:
    </DropdownItem>
    <DropdownItem
      className="dropdown-item-input"
      header={true}
      tag="button"
      toggle={true}
    />
    <DropdownItem
      className="assigneeItem"
      key="currentAssigneeUser"
      tag="button"
      toggle={true}
    >
      <AgentLabel
        className="assigneeLabel"
        name="steve@acme.gorgias.io"
        profilePictureUrl=""
        shouldDisplayAvatar={true}
      />
      <i
        className="material-icons md-2"
        onClick={[Function]}
      >
        close
      </i>
    </DropdownItem>
    <DropdownItem
      className="item"
      key="yourself"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Assign yourself
    </DropdownItem>
    <DropdownItem
      divider={true}
      key="dividerBeforeTeams"
      tag="button"
      toggle={true}
    />
    <TicketAssigneeTeamSection
      currentAssigneeTeam={null}
      key="teamSection"
      selectTeam={[Function]}
      teams={
        Immutable.Seq [
          Immutable.Map {
            "id": 1,
            "name": "Team 1",
            "decoration": Immutable.Map {},
          },
          Immutable.Map {
            "id": 2,
            "name": "Team 2",
            "decoration": Immutable.Map {},
          },
        ]
      }
    />
    <DropdownItem
      divider={true}
      key="dividerBeforeUsers"
      tag="button"
      toggle={true}
    />
    <TicketAssigneeUserSection
      currentAssigneeUser={
        Immutable.Map {
          "id": 1,
          "email": "steve@acme.gorgias.io",
        }
      }
      key="userSection"
      selectUser={[Function]}
      users={
        Immutable.List [
          Immutable.Map {
            "id": 1,
            "email": "steve@acme.gorgias.io",
          },
          Immutable.Map {
            "id": 2,
            "name": "User 2",
            "email": "email2@foo.com",
            "meta": Immutable.Map {},
          },
        ]
      }
    />
  </DropdownMenu>
</Dropdown>
`;

exports[`<TicketAssignee/> render() should display the info of the agent assigned 1`] = `
<Dropdown
  active={false}
  addonType={false}
  className="classname"
  direction="down"
  inNavbar={false}
  isOpen={false}
  nav={false}
  toggle={[Function]}
>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="toggle btn-transparent"
    color="secondary"
    type="button"
  >
    <AgentLabel
      className=""
      maxWidth="100"
      name="Steve Frizeli"
      profilePictureUrl="profilePictureUrl"
      shouldDisplayAvatar={true}
    />
  </DropdownToggle>
  <DropdownMenu
    flip={true}
    right={true}
    style={
      Object {
        "width": "260px",
      }
    }
    tag="div"
  >
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
      ASSIGN TO:
    </DropdownItem>
    <DropdownItem
      className="dropdown-item-input"
      header={true}
      tag="button"
      toggle={true}
    />
    <DropdownItem
      className="assigneeItem"
      key="currentAssigneeUser"
      tag="button"
      toggle={true}
    >
      <AgentLabel
        className="assigneeLabel"
        name="Steve Frizeli"
        profilePictureUrl=""
        shouldDisplayAvatar={true}
      />
      <i
        className="material-icons md-2"
        onClick={[Function]}
      >
        close
      </i>
    </DropdownItem>
    <DropdownItem
      className="item"
      key="yourself"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Assign yourself
    </DropdownItem>
    <DropdownItem
      divider={true}
      key="dividerBeforeTeams"
      tag="button"
      toggle={true}
    />
    <TicketAssigneeTeamSection
      currentAssigneeTeam={null}
      key="teamSection"
      selectTeam={[Function]}
      teams={
        Immutable.Seq [
          Immutable.Map {
            "id": 1,
            "name": "Team 1",
            "decoration": Immutable.Map {},
          },
          Immutable.Map {
            "id": 2,
            "name": "Team 2",
            "decoration": Immutable.Map {},
          },
        ]
      }
    />
    <DropdownItem
      divider={true}
      key="dividerBeforeUsers"
      tag="button"
      toggle={true}
    />
    <TicketAssigneeUserSection
      currentAssigneeUser={
        Immutable.Map {
          "id": 1,
          "name": "Steve Frizeli",
        }
      }
      key="userSection"
      selectUser={[Function]}
      users={
        Immutable.List [
          Immutable.Map {
            "id": 1,
            "name": "User 1",
            "email": "email1@foo.com",
            "meta": Immutable.Map {},
          },
          Immutable.Map {
            "id": 2,
            "name": "User 2",
            "email": "email2@foo.com",
            "meta": Immutable.Map {},
          },
        ]
      }
    />
  </DropdownMenu>
</Dropdown>
`;

exports[`<TicketAssignee/> render() should display the info of the agent assigned even if a team is assigned too 1`] = `
<Dropdown
  active={false}
  addonType={false}
  className="classname"
  direction="down"
  inNavbar={false}
  isOpen={false}
  nav={false}
  toggle={[Function]}
>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="toggle btn-transparent"
    color="secondary"
    type="button"
  >
    <AgentLabel
      className=""
      maxWidth="100"
      name="steve@acme.gorgias.io"
      profilePictureUrl=""
      shouldDisplayAvatar={true}
    />
  </DropdownToggle>
  <DropdownMenu
    flip={true}
    right={true}
    style={
      Object {
        "width": "260px",
      }
    }
    tag="div"
  >
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
      ASSIGN TO:
    </DropdownItem>
    <DropdownItem
      className="dropdown-item-input"
      header={true}
      tag="button"
      toggle={true}
    />
    <DropdownItem
      className="assigneeItem"
      key="currentAssigneeTeam"
      tag="button"
      toggle={true}
    >
      <TeamLabel
        className="assigneeLabel"
        name="Team 1"
        shouldDisplayAvatar={true}
        shouldDisplayTeamIcon={true}
      />
      <i
        className="material-icons md-2"
        onClick={[Function]}
      >
        close
      </i>
    </DropdownItem>
    <DropdownItem
      className="assigneeItem"
      key="currentAssigneeUser"
      tag="button"
      toggle={true}
    >
      <AgentLabel
        className="assigneeLabel"
        name="steve@acme.gorgias.io"
        profilePictureUrl=""
        shouldDisplayAvatar={true}
      />
      <i
        className="material-icons md-2"
        onClick={[Function]}
      >
        close
      </i>
    </DropdownItem>
    <DropdownItem
      className="item"
      key="yourself"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Assign yourself
    </DropdownItem>
    <DropdownItem
      divider={true}
      key="dividerBeforeTeams"
      tag="button"
      toggle={true}
    />
    <TicketAssigneeTeamSection
      currentAssigneeTeam={
        Immutable.Map {
          "id": 1,
          "name": "Team 1",
        }
      }
      key="teamSection"
      selectTeam={[Function]}
      teams={
        Immutable.Seq [
          Immutable.Map {
            "id": 1,
            "name": "Team 1",
            "decoration": Immutable.Map {},
          },
          Immutable.Map {
            "id": 2,
            "name": "Team 2",
            "decoration": Immutable.Map {},
          },
        ]
      }
    />
    <DropdownItem
      divider={true}
      key="dividerBeforeUsers"
      tag="button"
      toggle={true}
    />
    <TicketAssigneeUserSection
      currentAssigneeUser={
        Immutable.Map {
          "id": 1,
          "email": "steve@acme.gorgias.io",
        }
      }
      key="userSection"
      selectUser={[Function]}
      users={
        Immutable.List [
          Immutable.Map {
            "id": 1,
            "name": "User 1",
            "email": "email1@foo.com",
            "meta": Immutable.Map {},
          },
          Immutable.Map {
            "id": 2,
            "name": "User 2",
            "email": "email2@foo.com",
            "meta": Immutable.Map {},
          },
        ]
      }
    />
  </DropdownMenu>
</Dropdown>
`;

exports[`<TicketAssignee/> render() should display the name of the team assigned because there is no user assigned 1`] = `
<Dropdown
  active={false}
  addonType={false}
  className="classname"
  direction="down"
  inNavbar={false}
  isOpen={false}
  nav={false}
  toggle={[Function]}
>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="toggle btn-transparent"
    color="secondary"
    type="button"
  >
    <TeamLabel
      className=""
      maxWidth={100}
      name="Team 1"
      shouldDisplayAvatar={true}
      shouldDisplayTeamIcon={false}
    />
  </DropdownToggle>
  <DropdownMenu
    flip={true}
    right={true}
    style={
      Object {
        "width": "260px",
      }
    }
    tag="div"
  >
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
      ASSIGN TO:
    </DropdownItem>
    <DropdownItem
      className="dropdown-item-input"
      header={true}
      tag="button"
      toggle={true}
    />
    <DropdownItem
      className="assigneeItem"
      key="currentAssigneeTeam"
      tag="button"
      toggle={true}
    >
      <TeamLabel
        className="assigneeLabel"
        name="Team 1"
        shouldDisplayAvatar={true}
        shouldDisplayTeamIcon={true}
      />
      <i
        className="material-icons md-2"
        onClick={[Function]}
      >
        close
      </i>
    </DropdownItem>
    <DropdownItem
      className="item"
      key="yourself"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Assign yourself
    </DropdownItem>
    <DropdownItem
      divider={true}
      key="dividerBeforeTeams"
      tag="button"
      toggle={true}
    />
    <TicketAssigneeTeamSection
      currentAssigneeTeam={
        Immutable.Map {
          "id": 1,
          "name": "Team 1",
        }
      }
      key="teamSection"
      selectTeam={[Function]}
      teams={
        Immutable.Seq [
          Immutable.Map {
            "id": 1,
            "name": "Team 1",
            "decoration": Immutable.Map {},
          },
          Immutable.Map {
            "id": 2,
            "name": "Team 2",
            "decoration": Immutable.Map {},
          },
        ]
      }
    />
    <DropdownItem
      divider={true}
      key="dividerBeforeUsers"
      tag="button"
      toggle={true}
    />
    <TicketAssigneeUserSection
      currentAssigneeUser={null}
      key="userSection"
      selectUser={[Function]}
      users={
        Immutable.List [
          Immutable.Map {
            "id": 1,
            "name": "User 1",
            "email": "email1@foo.com",
            "meta": Immutable.Map {},
          },
          Immutable.Map {
            "id": 2,
            "name": "User 2",
            "email": "email2@foo.com",
            "meta": Immutable.Map {},
          },
        ]
      }
    />
  </DropdownMenu>
</Dropdown>
`;

exports[`<TicketAssignee/> render() should display users only 1`] = `
<Dropdown
  active={false}
  addonType={false}
  className="classname"
  direction="down"
  inNavbar={false}
  isOpen={false}
  nav={false}
  toggle={[Function]}
>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="toggle btn-transparent"
    color="secondary"
    type="button"
  >
    <span>
      Unassigned
    </span>
  </DropdownToggle>
  <DropdownMenu
    flip={true}
    right={true}
    style={
      Object {
        "width": "260px",
      }
    }
    tag="div"
  >
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
      ASSIGN TO:
    </DropdownItem>
    <DropdownItem
      className="dropdown-item-input"
      header={true}
      tag="button"
      toggle={true}
    />
    <DropdownItem
      className="item"
      key="yourself"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Assign yourself
    </DropdownItem>
    <DropdownItem
      divider={true}
      key="dividerBeforeUsers"
      tag="button"
      toggle={true}
    />
    <TicketAssigneeUserSection
      currentAssigneeUser={null}
      key="userSection"
      selectUser={[Function]}
      users={
        Immutable.List [
          Immutable.Map {
            "id": 1,
            "name": "User 1",
            "email": "email1@foo.com",
            "meta": Immutable.Map {},
          },
          Immutable.Map {
            "id": 2,
            "name": "User 2",
            "email": "email2@foo.com",
            "meta": Immutable.Map {},
          },
        ]
      }
    />
  </DropdownMenu>
</Dropdown>
`;

exports[`<TicketAssignee/> render() should not display any agent info because there is no assignee 1`] = `
<Dropdown
  active={false}
  addonType={false}
  className="classname"
  direction="down"
  inNavbar={false}
  isOpen={false}
  nav={false}
  toggle={[Function]}
>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="toggle btn-transparent"
    color="secondary"
    type="button"
  >
    <span>
      Unassigned
    </span>
  </DropdownToggle>
  <DropdownMenu
    flip={true}
    right={true}
    style={
      Object {
        "width": "260px",
      }
    }
    tag="div"
  >
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
      ASSIGN TO:
    </DropdownItem>
    <DropdownItem
      className="dropdown-item-input"
      header={true}
      tag="button"
      toggle={true}
    />
    <DropdownItem
      className="item"
      key="yourself"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Assign yourself
    </DropdownItem>
    <DropdownItem
      divider={true}
      key="dividerBeforeTeams"
      tag="button"
      toggle={true}
    />
    <TicketAssigneeTeamSection
      currentAssigneeTeam={null}
      key="teamSection"
      selectTeam={[Function]}
      teams={
        Immutable.Seq [
          Immutable.Map {
            "id": 1,
            "name": "Team 1",
            "decoration": Immutable.Map {},
          },
          Immutable.Map {
            "id": 2,
            "name": "Team 2",
            "decoration": Immutable.Map {},
          },
        ]
      }
    />
    <DropdownItem
      divider={true}
      key="dividerBeforeUsers"
      tag="button"
      toggle={true}
    />
    <TicketAssigneeUserSection
      currentAssigneeUser={null}
      key="userSection"
      selectUser={[Function]}
      users={
        Immutable.List [
          Immutable.Map {
            "id": 1,
            "name": "User 1",
            "email": "email1@foo.com",
            "meta": Immutable.Map {},
          },
          Immutable.Map {
            "id": 2,
            "name": "User 2",
            "email": "email2@foo.com",
            "meta": Immutable.Map {},
          },
        ]
      }
    />
  </DropdownMenu>
</Dropdown>
`;

exports[`<TicketAssignee/> render() should not display teams because object is empty 1`] = `
<Dropdown
  active={false}
  addonType={false}
  className="classname"
  direction="down"
  inNavbar={false}
  isOpen={false}
  nav={false}
  toggle={[Function]}
>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="toggle btn-transparent"
    color="secondary"
    type="button"
  >
    <span>
      Unassigned
    </span>
  </DropdownToggle>
  <DropdownMenu
    flip={true}
    right={true}
    style={
      Object {
        "width": "260px",
      }
    }
    tag="div"
  >
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
      ASSIGN TO:
    </DropdownItem>
    <DropdownItem
      className="dropdown-item-input"
      header={true}
      tag="button"
      toggle={true}
    />
    <DropdownItem
      className="item"
      key="yourself"
      onClick={[Function]}
      tag="button"
      toggle={true}
      type="button"
    >
      Assign yourself
    </DropdownItem>
    <DropdownItem
      divider={true}
      key="dividerBeforeUsers"
      tag="button"
      toggle={true}
    />
    <TicketAssigneeUserSection
      currentAssigneeUser={null}
      key="userSection"
      selectUser={[Function]}
      users={
        Immutable.List [
          Immutable.Map {
            "id": 1,
            "name": "User 1",
            "email": "email1@foo.com",
            "meta": Immutable.Map {},
          },
          Immutable.Map {
            "id": 2,
            "name": "User 2",
            "email": "email2@foo.com",
            "meta": Immutable.Map {},
          },
        ]
      }
    />
  </DropdownMenu>
</Dropdown>
`;

exports[`<TicketAssignee/> should read data from the redux store correctly 1`] = `
<TicketAssignee
  currentUser={
    Immutable.Map {
      "id": 1,
      "email": "steve@acme.gorgias.io",
    }
  }
  direction="left"
  dispatch={[Function]}
  handleTeams={true}
  handleUsers={true}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  teams={
    Immutable.Seq [
      Immutable.Map {
        "id": 1,
        "name": "Team 1",
        "decoration": Immutable.Map {},
      },
      Immutable.Map {
        "id": 2,
        "name": "Team 2",
        "decoration": Immutable.Map {},
      },
    ]
  }
  transparent={false}
  users={
    Immutable.List [
      Immutable.Map {
        "id": 1,
        "name": "User 1",
        "email": "email1@foo.com",
        "meta": Immutable.Map {},
      },
      Immutable.Map {
        "id": 2,
        "name": "User 2",
        "email": "email2@foo.com",
        "meta": Immutable.Map {},
      },
    ]
  }
/>
`;

exports[`<TicketAssigneeTeamSection/> render() should render received teams 1`] = `
Array [
  <h6
    class="dropdown-header"
    tabindex="-1"
  >
    TEAMS
  </h6>,
  <div
    class="teams"
  >
    <button
      class="item dropdown-item"
      tabindex="0"
      type="button"
    >
      <div
        class="TeamLabel"
      >
        <div
          class="component avatar"
          style="width:26px;height:26px"
        >
          <div
            class="initials"
            style="width:26px;height:26px;font-size:10.833333333333334px"
          >
            <span>
              T1
            </span>
          </div>
        </div>
        <span
          class="name"
        >
          Team 1
        </span>
      </div>
    </button>
    <button
      class="item dropdown-item"
      tabindex="0"
      type="button"
    >
      <div
        class="TeamLabel"
      >
        <div
          class="component avatar"
          style="width:26px;height:26px"
        >
          <div
            class="initials"
            style="width:26px;height:26px;font-size:10.833333333333334px"
          >
            <span>
              T2
            </span>
          </div>
        </div>
        <span
          class="name"
        >
          Team 2
        </span>
      </div>
    </button>
  </div>,
]
`;

exports[`<TicketAssigneeUserSection/> render() should render received users 1`] = `
Array [
  <h6
    class="dropdown-header"
    tabindex="-1"
  >
    USERS
  </h6>,
  <div
    class="users"
  >
    <button
      class="item dropdown-item"
      tabindex="0"
      type="button"
    >
      <div
        class="AgentLabel"
      >
        <div
          class="component avatar"
          style="width:26px;height:26px"
        >
          <div
            class="initials"
            style="width:26px;height:26px;font-size:10.833333333333334px"
          >
            <span>
              U1
            </span>
          </div>
        </div>
        <span
          class="name"
        >
          User 1
        </span>
      </div>
    </button>
    <button
      class="item dropdown-item"
      tabindex="0"
      type="button"
    >
      <div
        class="AgentLabel"
      >
        <div
          class="component avatar"
          style="width:26px;height:26px"
        >
          <div
            class="initials"
            style="width:26px;height:26px;font-size:10.833333333333334px"
          >
            <span>
              U2
            </span>
          </div>
        </div>
        <span
          class="name"
        >
          User 2
        </span>
      </div>
    </button>
  </div>,
]
`;
